[Scorecards] Added fix for overflowing how is marked question section

--- a/scoring/static/scoring/scss/table-question-council.scss
+++ b/scoring/static/scoring/scss/table-question-council.scss
@@ -33,7 +33,7 @@
     }
 
     .how-is-marked-section {
-        max-width: 350px;
+        max-width: 300px;
     }
 }
 
